Added new features, updated existing files, and removed obsolete components

--- a/code/demo/src/main/java/dockerfiles/cpp/Dockerfile
+++ b/code/demo/src/main/java/dockerfiles/cpp/Dockerfile
@@ -1,5 +1,6 @@
 FROM gcc:latest
 COPY code.cpp /app/code.cpp
+COPY input.txt /app/input.txt
 WORKDIR /app
 RUN g++ code.cpp -o code
-CMD ["./code"]
+CMD ["bash", "-c", "./code < /app/input.txt"]
