--- a/code/demo/src/main/java/dockerfiles/java/Dockerfile
+++ b/code/demo/src/main/java/dockerfiles/java/Dockerfile
@@ -1,3 +1,6 @@
 FROM openjdk:11
 COPY code.java /app/code.java
-CMD ["java", "/app/code.java"]
+COPY input.txt /app/input.txt
+WORKDIR /app
+RUN javac code.java
+CMD ["bash", "-c", "cat /app/input.txt | java code"]
