--- a/code/demo/src/main/java/dockerfiles/python/Dockerfile
+++ b/code/demo/src/main/java/dockerfiles/python/Dockerfile
@@ -1,3 +1,5 @@
 FROM python:3.9
 COPY code.py /app/code.py
-CMD ["python", "/app/code.py"]
+COPY input.txt /app/input.txt
+WORKDIR /app
+CMD ["bash", "-c", "python /app/code.py < /app/input.txt"]
